--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
           <div class="story">
             <h2>Orca Spends Vacation at Land World Puget</h2>
             <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-          </div>
-          <div class="earth-img">
-            <span>Earth Spins Backwards for 2017</span>
+            <div class="earth-img">
+              <span>Earth Spins Backwards for 2017</span>
+            </div>
           </div>
           <div class="story">
             <h2>Burger for Breakfast: How Early is too Early?</h2>
             <p class="narrative">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-          </div>
-          <div class="cameras-img">
-            <span>Research Shows Cameras Erase Memory</span>
+            <div class="cameras-img">
+              <span>Research Shows Cameras Erase Memory</span>
+            </div>
           </div>
         </div>
       </div>
@@ -54,15 +54,17 @@
           <h2>FBI Finds Action Star Guilty of False Advertising</h2>
           <p class="narrative">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
         </div>
-        <div class="cats-img">
-          <span>Cats in Control-Is It a Thing?</span>
+        <div class="story">
+          <div class="cats-img">
+            <span>Cats in Control-Is It a Thing?</span>
+          </div>
+          <p class="narrative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
         </div>
-        <p class="narrative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
       </div>
 
       <div class="column-small">
         <div class="cookie-img">
-          <img class="cookie" src="./resources/css/images/img-news-bite.png" / alt="Cookie Bite">
+          <img src="./resources/css/images/img-news-bite.png" / alt="Cookie Bite">
         </div>
         <div class="news-bites">
           <h3>NEWS BITES</h3>
@@ -74,10 +76,19 @@
           <span class="bite">Finally a Top Secret Way You Can</span>
         </div>
       </div>
-
+    </div>
     <footer>
       <div class="info">
-
+        <span class="title">MY Times</span>
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div>
+      <div class="copyright">
+        © 2016, My Times (A Division of Codecademy bite)
       </div>
     </footer>
 
